packages/imagproc/lib/ImagProc/Ipp/ptr_adapt.h

int ippiMaxEvery_32f_C1IRx(float*, int, float*, int, void*);
int ippiMinEvery_32f_C1IRx(float*, int, float*, int, void*);
int ippiAnd_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiOr_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiXor_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiNot_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiCompare_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*, int);
int ippiCompareC_8u_C1Rx(unsigned char*, int, unsigned char, unsigned char*, int, void*, int);
int ippiCompare_32f_C1Rx(float*, int, float*, int, unsigned char*, int, void*, int);
int ippiErode3x3_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiDilate3x3_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiRGBToYUV420_8u_C3P3Rx(unsigned char*, int, void**, int*, void*);
int ippiYUV420ToRGB_8u_P3C3Rx(void**, int*, unsigned char*, int, void*);
int ippiYUV420ToRGB_8u_P3Rx(void**, int*, void**, int, void*);
int ippiRGBToGray_8u_C3C1Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiRGBToHSV_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiHSVToRGB_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*);
int ippiSampleLine_8u_C1Rx(unsigned char*, int, void*, unsigned char*, void*, void*);
int ippiSampleLine_32f_C1Rx(float*, int, void*, float*, void*, void*);
int ippiAbsDiff_8u_C1Rx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*);
int ippiAbsDiff_32f_C1Rx(float*, int, float*, int, float*, int, void*);
int ippiIntegral_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float);
int ippiSqrIntegral_8u32f64f_C1Rx(unsigned char*, int, float*, int, double*, int, void*, float, double);
int ippiRectStdDev_32f_C1Rx(float*, int, double*, int, float*, int, void*, void*);
int ippiCannyGetSizex(void*, int*);
int ippiCanny_32f8u_C1Rx(float*, int, float*, int, unsigned char*, int, void*, float, float, unsigned char*);
int ippiDistanceTransform_3x3_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float*);
int ippiDistanceTransform_5x5_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float*);
int ippiFloodFillGetSizex(void*, int*);
int ippiFloodFillGetSize_Gradx(void*, int*);
int ippiFloodFill_8Con_8u_C1IRx(unsigned char*, int, void*, void*, unsigned char, void*, unsigned char*);