packages/imagproc/lib/ImagProc/Ipp/Adapt.hs


foreign import ccall "adapt.h ippiMaxEvery_32f_C1IRx"
    ippiMaxEvery_32f_C1IRx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiMaxEvery_32f_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMaxEvery_32f_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiMinEvery_32f_C1IRx"
    ippiMinEvery_32f_C1IRx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiMinEvery_32f_C1IR pSrc srcStep pSrcDst srcdstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMinEvery_32f_C1IRx pSrc srcStep pSrcDst srcdstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiAnd_8u_C1Rx"
    ippiAnd_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiAnd_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAnd_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiOr_8u_C1Rx"
    ippiOr_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiOr_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiOr_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiXor_8u_C1Rx"
    ippiXor_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiXor_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiXor_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiNot_8u_C1Rx"
    ippiNot_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiNot_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiNot_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCompare_8u_C1Rx"
    ippiCompare_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiCompare_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiCompare_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize ippCmpOp
    free proiSize
    return r

foreign import ccall "adapt.h ippiCompareC_8u_C1Rx"
    ippiCompareC_8u_C1Rx :: Ptr CUChar -> Int -> CUChar -> Ptr CUChar -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiCompareC_8u_C1R pSrc srcStep value pDst dstStep roiSize ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiCompareC_8u_C1Rx pSrc srcStep value pDst dstStep proiSize ippCmpOp
    free proiSize
    return r

foreign import ccall "adapt.h ippiCompare_32f_C1Rx"
    ippiCompare_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> CInt -> IO Int
ippiCompare_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize ippCmpOp = do
    proiSize <- new roiSize
    r <- ippiCompare_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize ippCmpOp
    free proiSize
    return r

foreign import ccall "adapt.h ippiErode3x3_8u_C1Rx"
    ippiErode3x3_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiErode3x3_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiErode3x3_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiDilate3x3_8u_C1Rx"
    ippiDilate3x3_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiDilate3x3_8u_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiDilate3x3_8u_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiRGBToYUV420_8u_C3P3Rx"
    ippiRGBToYUV420_8u_C3P3Rx :: Ptr CUChar -> Int -> Ptr () -> Ptr CInt -> Ptr IppiSize -> IO Int
ippiRGBToYUV420_8u_C3P3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiRGBToYUV420_8u_C3P3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiYUV420ToRGB_8u_P3C3Rx"
    ippiYUV420ToRGB_8u_P3C3Rx :: Ptr () -> Ptr CInt -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiYUV420ToRGB_8u_P3C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiYUV420ToRGB_8u_P3C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiYUV420ToRGB_8u_P3Rx"
    ippiYUV420ToRGB_8u_P3Rx :: Ptr () -> Ptr CInt -> Ptr () -> Int -> Ptr IppiSize -> IO Int
ippiYUV420ToRGB_8u_P3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiYUV420ToRGB_8u_P3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiRGBToGray_8u_C3C1Rx"
    ippiRGBToGray_8u_C3C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiRGBToGray_8u_C3C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiRGBToGray_8u_C3C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiRGBToHSV_8u_C3Rx"
    ippiRGBToHSV_8u_C3Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiRGBToHSV_8u_C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiRGBToHSV_8u_C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiHSVToRGB_8u_C3Rx"
    ippiHSVToRGB_8u_C3Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiHSVToRGB_8u_C3R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiHSVToRGB_8u_C3Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiSampleLine_8u_C1Rx"
    ippiSampleLine_8u_C1Rx :: Ptr CUChar -> Int -> Ptr IppiSize -> Ptr CUChar -> Ptr IppiPoint -> Ptr IppiPoint -> IO Int
ippiSampleLine_8u_C1R pSrc srcStep roiSize pDst pt1 pt2 = do
    proiSize <- new roiSize
    ppt1 <- new pt1
    ppt2 <- new pt2
    r <- ippiSampleLine_8u_C1Rx pSrc srcStep proiSize pDst ppt1 ppt2
    free proiSize
    free ppt1
    free ppt2
    return r

foreign import ccall "adapt.h ippiSampleLine_32f_C1Rx"
    ippiSampleLine_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> Ptr IppiPoint -> Ptr IppiPoint -> IO Int
ippiSampleLine_32f_C1R pSrc srcStep roiSize pDst pt1 pt2 = do
    proiSize <- new roiSize
    ppt1 <- new pt1
    ppt2 <- new pt2
    r <- ippiSampleLine_32f_C1Rx pSrc srcStep proiSize pDst ppt1 ppt2
    free proiSize
    free ppt1
    free ppt2
    return r

foreign import ccall "adapt.h ippiAbsDiff_8u_C1Rx"
    ippiAbsDiff_8u_C1Rx :: Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> IO Int
ippiAbsDiff_8u_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAbsDiff_8u_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiAbsDiff_32f_C1Rx"
    ippiAbsDiff_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO Int
ippiAbsDiff_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAbsDiff_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiIntegral_8u32f_C1Rx"
    ippiIntegral_8u32f_C1Rx :: Ptr CUChar -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> IO Int
ippiIntegral_8u32f_C1R pSrc srcStep pDst dstStep roiSize val = do
    proiSize <- new roiSize
    r <- ippiIntegral_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize val
    free proiSize
    return r

foreign import ccall "adapt.h ippiSqrIntegral_8u32f64f_C1Rx"
    ippiSqrIntegral_8u32f64f_C1Rx :: Ptr CUChar -> Int -> Ptr Float -> Int -> Ptr Double -> Int -> Ptr IppiSize -> Float -> Double -> IO Int
ippiSqrIntegral_8u32f64f_C1R pSrc srcStep pDst dstStep pSqr sqrStep roiSize val valSqr = do
    proiSize <- new roiSize
    r <- ippiSqrIntegral_8u32f64f_C1Rx pSrc srcStep pDst dstStep pSqr sqrStep proiSize val valSqr
    free proiSize
    return r

foreign import ccall "adapt.h ippiRectStdDev_32f_C1Rx"
    ippiRectStdDev_32f_C1Rx :: Ptr Float -> Int -> Ptr Double -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr IppiRect -> IO Int
ippiRectStdDev_32f_C1R pSrc srcStep pSqr sqrStep pDst dstStep roiSize rect = do
    proiSize <- new roiSize
    prect <- new rect
    r <- ippiRectStdDev_32f_C1Rx pSrc srcStep pSqr sqrStep pDst dstStep proiSize rect
    free proiSize
    free prect
    return r

foreign import ccall "adapt.h ippiCannyGetSizex"
    ippiCannyGetSizex :: Ptr IppiSize -> Ptr CInt -> IO Int
ippiCannyGetSize roiSize bufferSize = do
    proiSize <- new roiSize
    r <- ippiCannyGetSizex proiSize bufferSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiCanny_32f8u_C1Rx"
    ippiCanny_32f8u_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr CUChar -> Int -> Ptr IppiSize -> Float -> Float -> Ptr CUChar -> IO Int
ippiCanny_32f8u_C1R pSrcDx srcDxStep pSrcDy srcDyStep pDstEdges dstEdgeStep roiSize lowThresh highThresh pBuffer = do
    proiSize <- new roiSize
    r <- ippiCanny_32f8u_C1Rx pSrcDx srcDxStep pSrcDy srcDyStep pDstEdges dstEdgeStep proiSize lowThresh highThresh pBuffer
    free proiSize
    return r

foreign import ccall "adapt.h ippiDistanceTransform_3x3_8u32f_C1Rx"
    ippiDistanceTransform_3x3_8u32f_C1Rx :: Ptr CUChar -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> IO Int
ippiDistanceTransform_3x3_8u32f_C1R pSrc srcStep pDst dstStep roiSize pMetrics = do
    proiSize <- new roiSize
    r <- ippiDistanceTransform_3x3_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize pMetrics
    free proiSize
    return r

foreign import ccall "adapt.h ippiDistanceTransform_5x5_8u32f_C1Rx"
    ippiDistanceTransform_5x5_8u32f_C1Rx :: Ptr CUChar -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> IO Int
ippiDistanceTransform_5x5_8u32f_C1R pSrc srcStep pDst dstStep roiSize pMetrics = do
    proiSize <- new roiSize
    r <- ippiDistanceTransform_5x5_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize pMetrics
    free proiSize
    return r

foreign import ccall "adapt.h ippiFloodFillGetSizex"
    ippiFloodFillGetSizex :: Ptr IppiSize -> Ptr CInt -> IO Int
ippiFloodFillGetSize roiSize pBufSize = do
    proiSize <- new roiSize
    r <- ippiFloodFillGetSizex proiSize pBufSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiFloodFillGetSize_Gradx"
    ippiFloodFillGetSize_Gradx :: Ptr IppiSize -> Ptr CInt -> IO Int
ippiFloodFillGetSize_Grad roiSize pBufSize = do
    proiSize <- new roiSize
    r <- ippiFloodFillGetSize_Gradx proiSize pBufSize
    free proiSize
    return r

foreign import ccall "adapt.h ippiFloodFill_8Con_8u_C1IRx"
    ippiFloodFill_8Con_8u_C1IRx :: Ptr CUChar -> Int -> Ptr IppiSize -> Ptr IppiPoint -> CUChar -> Ptr IppiConnectedComp -> Ptr CUChar -> IO Int
ippiFloodFill_8Con_8u_C1IR pImage imageStep roiSize seed newVal pRegion pBuffer = do
    proiSize <- new roiSize
    pseed <- new seed
    r <- ippiFloodFill_8Con_8u_C1IRx pImage imageStep proiSize pseed newVal pRegion pBuffer
    free proiSize
    free pseed
    return r
